# fightgraphs-pipeline

./: .gitignore  README.md  pyproject.toml
src/fightgraphs_pipeline/: utils.py
src/fightgraphs_pipeline/database/: mongodb_controller.py  postgres_controller.py  schema.sql
src/fightgraphs_pipeline/extract/: extraction.py
src/fightgraphs_pipeline/models/: mongodb_models.py  postgresql_models.py
src/fightgraphs_pipeline/transform/: event_mapper.py  fighter_mapper.py
tests/: scratch_tests.py
